tests/Compilation/negative/test008.juvix
-- redundant pattern
module test008;

import Stdlib.Prelude open;

f (x : List Nat) : Nat :=
  case x of
    | nil := 0
    | x :: _ := x
    | _ := 0;

main : Nat := f (1 :: 2 :: nil);
